src/styles/Blog.scss
.rec {
  background: transparent;
}
.rec.rec-arrow {
  border-radius: 50%;
  margin: 20px;
  background: #fafafa;
  color: #1c1a46;
}
.rec.rec-carousel {
  > button {
    &:hover {
      color: #fafafa;
      background: #1c1a46;
    }
  }
}

.rec.rec-dot {
  background: #fafafa;
  box-shadow: none;
  margin-bottom: 130px;
  &:hover {
    box-shadow: 0 0 1px 3px #1c1a46;
  }
  &_active {
    height: 11px;
    width: 11px;
    background: #1c1a46;
    box-shadow: none;
    &:hover {
      box-shadow: none;
    }
    &:focus {
      box-shadow: none;
    }
  }
}

.blog {
  min-height: 100vh;
  background-color: #5e4fea;
  &-footer-logo {
    background: transparent;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 170px;
    > img {
      height: 100%;
      background: transparent;
    }
    > div {
      background: transparent;
      display: flex;
      justify-content: center;
      align-items: center;
      color: #42406c;
      > h1 {
        background: transparent;
        font-size: 2rem;
        font-weight: 100;
      }
      > h2 {
        background: transparent;
        font-size: 2rem;
        font-weight: 600;
      }
    }
  }
  &-footer-social {
    background: transparent;
    display: flex;
    margin: 20px 0;
    > img {
      height: 60%;
      margin: 15px;
      background: transparent;
      &:hover {
        filter: invert(32%) sepia(92%) saturate(4041%) hue-rotate(238deg)
          brightness(96%) contrast(91%);
        cursor: pointer;
      }
    }
  }
  &-item {
    padding: 30px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    width: 60%;
    margin-bottom: 50px;
    border-radius: 45px;
    background: #fafafa;
    filter: drop-shadow(0 10px 10px #0000003a);
    > p {
      background: transparent;
      color: #5e4fea;
      margin-bottom: 5px;
    }
    > h1 {
      background: transparent;
      font-size: 1.5rem;
      color: #42406c;
    }
    > img {
      margin: 30px 0;
      background-position: bottom;
      background-size: contain;
      background-repeat: no-repeat;
      background-color: transparent;
    }
    > button {
      font-size: 1.3rem;
      font-weight: 500;
      background-color: #6c63ff;
      color: #fafafa;
      border: none;
      border-radius: 50px;
      white-space: nowrap;
      padding: 12px 24px;
      align-self: flex-start;
      cursor: pointer;
      transition: background 300ms;
      &:hover {
        background: #1c1a46;
      }
    }
  }
  > header {
    text-align: center;
    padding-top: 50px;
    padding-bottom: 60px;
    background: transparent;
    > h1 {
      color: #fafafa;
      font-size: 2.6rem;
      background: transparent;
      padding-bottom: 7px;
    }
    > p {
      color: #fafafa;
      background: transparent;
      font-weight: 300;
      font-size: 1.1rem;
      text-align: center;
    }
  }

  > footer {
    padding-bottom: 70px;
    min-height: 60vh;
    width: 100%;
    background-color: #fafafa;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    > section {
      position: absolute;
      padding: 50px 0;
      width: 90%;
      background: #1c1a46;
      top: 0;
      transform: translateY(-50%);
      border-radius: 15px;
      display: flex;
      justify-content: space-around;
      align-items: center;
      > h1 {
        font-size: 1.8rem;
        background: transparent;
        color: #fafafa;
      }
      > p {
        width: 28%;
        text-align: center;
        background: transparent;
        color: #fafafa;
        font-weight: 300;
      }
      > button {
        font-size: 1.3rem;
        font-weight: 300;
        background: transparent;
        color: #fafafa;
        border: 3px solid #5e4fea;
        border-radius: 50px;
        white-space: nowrap;
        padding: 12px 24px;
        cursor: pointer;
        transition: background 300ms;
        &:hover {
          background: #5e4fea;
        }
      }
    }
    > main {
      position: absolute;
      top: 200px;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      > p {
        font-weight: 100;
      }
    }
  }
}

@media all and (max-width: 990px) {
  .blog {
    &-item {
      width: 70%;
    }
  }
}

@media all and (max-width: 850px) {
  .blog {
    &-item {
      > p {
        font-size: 0.9rem;
      }
      > h1 {
        font-size: 1.3rem;
      }
      > img {
        margin: 25px 0;
      }
      > button {
        font-size: 1.1rem;
        padding: 10px 20px;
        align-self: center;
      }
    }
    > footer {
      > section {
        width: 95%;
      }
    }
  }
}

@media all and (max-width: 790px) {
  .blog {
    &-item {
      width: 75%;
    }
  }
  .rec.rec-arrow {
    margin: 0;
  }
  .rec.rec-arrow-left {
    margin-left: 10px;
  }
  .rec.rec-arrow-right {
    margin-right: 10px;
  }
}

@media all and (max-width: 759px) {
  .blog {
    &-item {
      width: 50%;
      > p {
        font-size: 1rem;
      }
      > h1 {
        font-size: 1.5rem;
      }
      > img {
        margin: 30px 0;
      }
      > button {
        font-size: 1.3rem;
        padding: 12px 24px;
        align-self: flex-start;
      }
    }
    > footer {
      > section {
        > h1 {
          font-size: 1.5rem;
        }
        > p {
          font-size: 0.9rem;
          width: 30%;
        }
        > button {
          font-size: 1.1rem;

          padding: 12px 24px;
        }
      }
    }
  }
}

@media all and (max-width: 670px) {
  .blog {
    margin-bottom: 100px;
    &-item {
      width: 60%;
    }
    > footer {
      > section {
        padding: 0;
        width: 70%;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        > h1 {
          font-size: 1.5rem;
          margin: 15px;
          margin-top: 30px;
        }
        > p {
          font-size: 0.9rem;
          width: 90%;
          margin: 15px;
        }
        > button {
          font-size: 1.1rem;

          padding: 12px 24px;
          margin: 15px;
          margin-bottom: 30px;
        }
      }
    }
  }
  .rec.rec-dot {
    margin-bottom: 180px;
  }
}

@media all and (max-width: 570px) {
  .blog {
    &-item {
      width: 70%;
    }
  }
}

@media all and (max-width: 540px) {
  .blog {
    &-item {
      width: 80%;
    }
  }
}

@media all and (max-width: 500px) {
  .blog {
    > header {
      > h1 {
        font-size: 2.2rem;
      }
      > p {
        font-size: 0.9rem;
      }
    }
    > footer {
      > section {
        width: 80%;
      }
    }
  }
}

@media all and (max-width: 470px) {
  .blog {
    &-item {
      width: 60%;
    }
    &-footer-social {
      > img {
        height: 40px;
      }
    }
    &-footer-logo {
      > img {
        height: 70%;
      }
    }
  }
  .rec.rec-carousel {
    > button {
      display: none;
    }
  }
}

@media all and (max-width: 400px) {
  .blog {
    &-item {
      width: 70%;
    }

    > header {
      > h1 {
        font-size: 1.8rem;
      }
      > p {
        font-size: 0.8rem;
      }
    }
    > footer {
      > main {
        > p {
          font-size: 0.8rem;
        }
      }
    }
    &-item {
      > p {
        font-size: 0.9rem;
      }
      > h1 {
        font-size: 1.3rem;
      }
      > img {
        margin: 25px 0;
      }
      > button {
        font-size: 1.1rem;
        padding: 10px 20px;
        align-self: flex-start;
      }
    }
  }
}

@media all and (max-width: 340px) {
  .blog {
    &-item {
      width: 75%;
    }
    &-footer-social {
      > img {
        height: 30px;
      }
    }
    &-footer-logo {
      > img {
        height: 50%;
      }
    }
  }
}

@media all and (max-width: 300px) {
  .blog {
    &-item {
      > p {
        font-size: 0.8rem;
      }
      > h1 {
        font-size: 1.1rem;
      }
      > img {
        margin: 25px 0;
      }
      > button {
        font-size: 0.9rem;
        padding: 8px 16px;
        align-self: flex-start;
      }
    }
    &-footer-social {
      > img {
        height: 27px;
      }
    }
  }
}

